Add gradle task to generate PlantUML diagrams
Bump gradle to version 5.5 as the plugin refuses to work on 5.2.

Update PlantUML user guide to reflect the update.

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '4.0.4'
     id 'org.asciidoctor.convert' version '1.5.6'
     id 'application'
-    id 'com.cosminpolifronie.gradle.plantuml' version '1.6.0'
+    id 'com.cosminpolifronie.gradle.plantuml' version '1.5.0'
 }
 
 // Specifies the entry point of the application
@@ -229,11 +229,11 @@ task deployOfflineDocs(type: Copy) {
 }
 
 plantUml {
-    render input: 'docs/diagrams/*.puml', output: 'docs/images', format: 'png', withMetadata: false
+    render input: 'docs/diagrams/*.puml', output: 'docs/images', format: 'png'
 }
 
-//weird bug where the name of the plugin clashes with name of the task, use plantUmlIO instead
-asciidoctor.dependsOn plantUmlIO
+// workaround as the task and plugin has the same name
+asciidoctor.dependsOn tasks.plantUml
 deployOfflineDocs.dependsOn asciidoctor
 processResources.dependsOn deployOfflineDocs
 
