Add gradle task to generate PlantUML diagrams
Bump gradle to version 5.5 since the plantuml plugin fails on 5.2.

Rename UndoRedoState0 to UndoRedo since an artifact will the filename
will always be generated.

Update UsingPlantUml to reflect the new plugin

Add entry in .gitignore to prevent upload of an empty Style.png.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ src/test/data/sandbox/
 
 # MacOS custom attributes files created by Finder
 .DS_Store
+
+# Unwanted artifact from gradle plugin: plantUml
+/docs/images/Style.png
