--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
     id 'java'
     id 'jacoco'
     id 'checkstyle'
+    id 'com.cosminpolifronie.gradle.plantuml' version '1.6.0'
     id 'com.github.kt3k.coveralls' version '2.4.0'
     id 'com.github.johnrengelman.shadow' version '4.0.4'
     id 'org.asciidoctor.convert' version '1.5.6'
@@ -227,6 +228,12 @@ task deployOfflineDocs(type: Copy) {
     }
 }
 
+plantUml {
+    render input: 'docs/diagrams/*.puml', output: 'docs/images', format: 'png', withMetadata: false
+}
+
+// workaround as the task and plugin has the same name
+asciidoctor.dependsOn tasks.plantUml
 deployOfflineDocs.dependsOn asciidoctor
 processResources.dependsOn deployOfflineDocs
 
